--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "type": "module",
-  "dependencies": {
-    "node-fetch": "^3.3.2"
-  }
+  "name": "roblox-api",
+  "version": "1.0.0",
+  "type": "module"
 }
